# ai-drama-pipeline-v2

./: .env.example  .gitignore  ANALYSIS.md  DESIGN_PLAN.md  README.md  REFACTOR_TODO.md  TODO.md  cli.py  k.txt  pyproject.toml
api/: __init__.py  registry.py
api/backends/image/: comfyui.py
api/backends/lipsync/: musetalk.py  wav2lip.py
api/backends/llm/: ollama.py
api/backends/music/: template.py
api/backends/seko/: __init__.py  proposal.py
api/backends/training/: __init__.py  ai_toolkit.py  fluxgym.py  kohya_ss.py
api/backends/tts/: cosyvoice.py  fish_speech.py  gpt_sovits.py  mimo_voiceclone.py  mimo_voicedesign.py
config/: models_registry.yaml  project.yaml  project.yaml.example  system.yaml
config/characters/: guchen.yaml.example
docs/: REFACTORING_PLAN.md  external-llm-guide.md  external-llm-output-spec.md  external-llm-output-spec.txt  pipeline.md  trae-import-guide.md
engines/: __init__.py  _portrait_helper.py  camera.py  consistency.py  emotions.py  gpu_adapter.py  llm_generator.py  multi_char.py  portrait.py  prompt.py  quality.py  shot_manager.py  storyboard.py  video_consistency.py  workflow.py  workflow_builder.py
flow/: batch.py  episode.py  model_registry.py  orchestrator.py
infra/: asset_tracker.py  cache.py  config.py  ffmpeg.py  gpu.py  http.py  http_pool.py  json_parse.py  network.py  redis_mgr.py  retry.py  text.py  toolcheck.py  transitions.py
infra/database/: __init__.py  characters.py  comfyui_assets.py  episodes.py  generation.py  pool.py  scenes.py  schema.py  shots.py
pipeline/: celery_app.py  portraits.py  preview.py  producer.py  scene_images.py  tasks.py
post/: distributor.py  effects.py  music.py  production.py  subtitle.py  transitions.py  vertical.py
scripts/: ai_toolkit_api.py  project_mgr.py  validate_import.py
storyboard/: episodes.csv
tests/: test_all.py  test_api.py  test_celery.py  test_e2e.py
web/: app.py
web/routers/: api.py
web/schemas/: __init__.py
web/services/: __init__.py
web/static/: index.html
workflows/: 01_first_frame_flux.json  01_first_frame_sd15.json  02_img2video.json  03_img2video_cogvideo.json  04_img2video_cosmos.json  README.md  cosmos_predict2_2B_t2i.json
(+24 files in other folders)
