[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-drama-pipeline"
version = "2.0.0"
description = "AI 短剧全流程生产管线 v2 — 从剧本到成片，一键搞定"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
db = ["psycopg2-binary>=2.9.0", "redis>=5.0.0", "celery>=5.3.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
all = ["ai-drama-pipeline[db,dev]"]

[project.scripts]
drama = "cli:main"

[tool.setuptools.packages.find]
include = ["api*", "infra*", "pipeline*", "post*", "web*", "cli*"]

[tool.ruff]
line-length = 120
target-version = "py310"
